[gd_scene load_steps=2 format=3 uid="uid://dwmbphp2deivs"]

[ext_resource type="Script" path="res://Scripts/multiplayer_menu.gd" id="1_j5jeb"]

[node name="Play_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j5jeb")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 104.0
offset_top = 112.0
offset_right = 151.0
offset_bottom = 135.0
text = "Name"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 190.0
offset_top = 96.0
offset_right = 930.0
offset_bottom = 149.0

[node name="Host" type="Button" parent="."]
layout_mode = 0
offset_left = 393.0
offset_top = 175.0
offset_right = 482.0
offset_bottom = 238.0
text = "Host"

[node name="Start Game" type="Button" parent="."]
layout_mode = 0
offset_left = 190.0
offset_top = 175.0
offset_right = 385.0
offset_bottom = 238.0
text = "Start Game"

[node name="Join" type="Button" parent="."]
layout_mode = 0
offset_left = 489.0
offset_top = 175.0
offset_right = 566.0
offset_bottom = 238.0
text = "Join"

[connection signal="button_down" from="Host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="Start Game" to="." method="_on_start_game_button_down"]
[connection signal="button_down" from="Join" to="." method="_on_join_button_down"]
